@@ -1,0 +1,264 @@
+<!DOCTYPE html>
+<head>
+<script type='application/ld+json'>
+{"@context": "https://schema.org", "@graph": [{"@type": "Article", "headline": "\u777d\u9055\u5341\u5e74\uff012NE1\u91cd\u8fd4\u821e\u53f0\u6176\u795d15\u9031\u5e74\uff0c\u8207\u7c89\u7d72\u8fd1\u8ddd\u96e2\u4e92\u52d5\uff0c\u4e9e\u6d32\u5de1\u6f14\u5373\u5c07\u5c55\u958b", "description": "\u777d\u9055\u5341\u5e74\uff012NE1\u91cd\u8fd4\u821e\u53f0\u6176\u795d15\u9031\u5e74\uff0c\u8207\u7c89\u7d72\u8fd1\u8ddd\u96e2\u4e92\u52d5\uff0c\u4e9e\u6d32\u5de1\u6f14\u5373\u5c07\u5c55\u958b", "url": "https://www.famechos.me/news/\u777d\u9055\u5341\u5e74\uff012NE1\u91cd\u8fd4\u821e\u53f0\u6176\u795d15\u9031\u5e74\uff0c\u8207\u7c89\u7d72\u8fd1\u8ddd\u96e2\u4e92\u52d5\uff0c\u4e9e\u6d32\u5de1\u6f14\u5373\u5c07\u5c55\u958b.html", "image": "https://www.famechos.me/images/banner.jpg", "datePublished": "2024-10-11T17:27:12.598475+08:00", "author": {"@type": "Person", "name": "Famechos"}, "publisher": {"@type": "Organization", "name": "Famechos", "url": "https://www.famechos.me"}}, {"@type": "Organization", "name": "Famechos", "url": "https://www.famechos.me", "logo": "https://www.famechos.me/icons/favicon.png"}, {"@type": "WebSite", "name": "Famechos", "url": "https://www.famechos.me"}]}
+</script>
+<link rel="canonical" href="https://www.famechos.me/news/睽違十年！2NE1重返舞台慶祝15週年，與粉絲近距離互動，亞洲巡演即將展開.html"/>
+<meta name="description" content="睽違十年！2NE1重返舞台慶祝15週年，與粉絲近距離互動，亞洲巡演即將展開。睽違十年的K-POP傳奇女團2NE1宣布重返舞台，慶祝出道15週年，與粉絲近距離互動，亞洲巡演即將展開。">
+
+<meta name="keywords" content="2NE1, 睽違十年, 15週年, 亞洲巡演, K-POP, 女團, 粉絲, 慶祝, 舞台">
+
+	<link rel="stylesheet" href="../main-nav.css">
+	<link rel="stylesheet" href="../main-content.css">
+	<link rel="stylesheet" href="../main-small.css">
+	<link rel="stylesheet" href="../post.css">
+	<link rel="stylesheet" href="../main-footer.css">
+	<link rel="stylesheet" href="../news.css">
+ 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css"> 
+	<link rel="stylesheet" href="https://fonts.googleapis.com/earlyaccess/notosanstc.css">
+        <meta property="og:url" content="https://www.famechos.me/news/睽違十年！2NE1重返舞台慶祝15週年，與粉絲近距離互動，亞洲巡演即將展開.html" />
+        <meta property="og:title" content="睽違十年！2NE1重返舞台慶祝15週年，與粉絲近距離互動，亞洲巡演即將展開" />
+        <meta property="og:description" content="睽違十年！2NE1重返舞台慶祝15週年，與粉絲近距離互動，亞洲巡演即將展開" />
+        <meta property="og:image" content="https://www.famechos.me/images/banner.jpg" />
+        <meta property="twitter:card" content="summary_large_image" />
+        <meta property="twitter:title" content="睽違十年！2NE1重返舞台慶祝15週年，與粉絲近距離互動，亞洲巡演即將展開" />
+        <meta property="twitter:description" content="睽違十年！2NE1重返舞台慶祝15週年，與粉絲近距離互動，亞洲巡演即將展開" />
+        <meta property="twitter:image" content="https://www.famechos.me/images/banner.jpg" />
+	<meta name="theme-color" content="white">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta property="og:locale" content="zh_TW" />
+        <meta property="og:site_name" content="Famechos" />
+	<meta property="og:type" content="article" />
+	<meta name="robots" content="index, follow" />
+	<meta name="author" content="Famechos" />
+        <meta name="referrer" content="origin">
+	<meta name="apple-mobile-web-app-capable" content="yes"/>
+        <meta name="apple-mobile-web-app-status-bar-style" content="black"/>
+        <meta name="apple-mobile-web-app-title" content="Avoir"/>
+        <meta name="apple-touch-fullscreen" content="yes"/>
+        
+<style> * {box-sizing: border-box;margin: 0;padding: 0;font-family: 'Noto Sans TC', sans-serif;scroll-behavior: smooth;}</style>
+
+</head>
+
+<body>
+
+<nav class="nav">
+    <div class="nav-outerbox">
+      <div class="nav-inner-left">
+        <div class="nav-name-logo">
+          <img class="famechos-logo" src="../img/famechos_logo.png">
+          
+        </div>
+        <div class="nav-separate">
+          <p>|</p>
+        </div>
+        <div class="nav-type-1 nav-type">
+          <button class="nav-type-btn1 nav-type-btn">
+          <h2 class="nav-type-text">K-POP</h2>
+        </button>
+  
+        </div>
+        <div class="nav-type-2 nav-type">
+          <button class="nav-type-btn2 nav-type-btn">
+          <h2 class="nav-type-text">J-POP</h2>
+        </button>
+  
+        </div>
+        <div class="nav-type-3 nav-type">
+          <button class="nav-type-btn3 nav-type-btn">
+          <h2 class="nav-type-text">影視</h2>
+        </button>
+          
+        </div>
+        <div class="nav-type-4 nav-type">
+          <button class="nav-type-btn4 nav-type-btn">
+          <h2 class="nav-type-text">其他</h2>
+        </button>
+        </div>  
+      </div>
+      <div class="nav-inner-right">
+        <div class="nav-feedback-outer">
+          <button class="feedback-btn nav-type-btn">
+            <h2 class="nav-type-text">關於我們</h2>
+          </button>
+        </div>
+        <div class="nav-setting">
+          <button class="setting-btn nav-type-btn">
+            <h2 class="nav-type-text">私隱條款</h2>
+          </button>
+        </div>
+        <div class="nav-list">
+          <button id="list-btn" class="list-btn nav-type-btn">
+            <i class="bi bi-list"></i>
+          </button>
+        </div>
+
+      </div>
+
+      <div id="list" class="nav-list-outer">
+        <div class="nav-type-1 nav-type list-type">
+          <button class="list-type-btn">
+          <p>K-POP</p>
+          </button>
+        </div>
+
+        <div class="nav-type-2 nav-type list-type">
+          <button class="list-type-btn">
+          <p>J-POP</p>
+          </button>
+        </div>
+
+        <div class="nav-type-3 nav-type list-type">
+          <button class="list-type-btn">
+          <p>影視</p>
+          </button>
+        </div>
+
+        <div class="nav-type-4 nav-type list-type">
+          <button class="list-type-btn">
+          <p>其他</p>
+          </button>
+        </div>
+
+        <div class="nav-type-5 nav-type list-type">
+          <button class="list-type-btn">
+          <p>關於我們</p>
+          </button>
+        </div>
+
+        <div class="nav-type-6 nav-type list-type">
+          <button class="list-type-btn">
+          <p>私隱條款</p>
+          </button>
+
+        </div>  
+
+      </div>
+      
+    </div>
+  </nav>
+
+
+  <main>
+    <div class="news-main-outer">
+      <div class="news-title-outer">
+        <h1>睽違十年！2NE1重返舞台慶祝15週年，與粉絲近距離互動，亞洲巡演即將展開</h1>
+	</div>
+
+      <div class="news-content-outer">
+
+        <div class="news-info-outer">
+          <p class="news-content-type">K-Pop</p>
+          <p class="news-date">11/10/2024</p>
+        </div>
+	<p>星期日晚上，奧林匹克公園奧林匹克廳（Olympic Hall）響起了「Come Back Home」的歌聲，標誌著韓國流行音樂女子組合2NE1（투애니원）十多年來首次演唱會的開始。四位成員朴山達拉、李彩麟、朴春和孔旻智登上舞台，令粉絲們興奮不已。</p>
+<p>2NE1的獨特風格和標誌性的服裝再次迷倒了觀眾。李彩麟穿著一件醒目的紅色夾克，搭配一條大紅色絲帶，而朴山達拉則穿著一件大膽的西班牙斗篷，肩膀上有誇張的肩墊。</p>
+<p>在演唱會的最後一場「Welcome Back」中，許多忠實的粉絲們都感動得流下了眼淚。朴山達拉對觀眾說：「黑桃們，好久不見！如果你們準備好聽下一首歌，就喊出『Let's play』吧！」</p>
+<p>舞台和觀眾席之間的距離使得演唱會的沉浸感更加強烈。儘管四位成員已經分開多年，但她們仍然呈現了一場強大的表演，重新演繹了經典歌曲，如「Can't」、「Falling In Love」和「我不在乎」。</p>
+<p>舞蹈編排充滿活力，遠超出一些現今韓國流行音樂女子組合的舞蹈。年輕成員孔旻智，過去曾被其他成員的才華所掩蓋，但這次她卻展現了真正出色的歌唱和舞蹈能力。</p>
+<p>演唱會的第一部分結束後，螢幕上播放了包括李知恩、NewJeans、Ive、TWICE、aespa和Stray Kids在內的韓國流行音樂藝人的祝賀視頻，慶祝2NE1的15週年演唱會。</p>
+<p>李彩麟隨後以個人表演「The Baddest Female」和「MTBD」迷倒了觀眾，她穿著一件長白色毛皮長袍，然後戲劇性地將它扔掉。在下一個部分，2NE1穿著黑色服裝，演唱了真摯的抒情歌曲，包括「Missing You」、「It Hurts」、「If I Were You」和「Lonely」。</p>
+一個懷舊的視頻蒙太奇展示了2NE1的練習生時代，2008年她們努力成為韓國流行音樂偶像，以及自2009年出道以來的組合之旅。<h2>2NE1 演唱會：慶祝 15 週年，與粉絲近距離互動</h2>
+<p>演唱會在她們的熱門歌曲「我是最棒的」的爆炸性表演中達到了高潮。觀眾興奮地跳舞和唱歌，成員們走向人群，與粉絲們近距離互動。</p>
+<p>朴山達拉表示，這個場地對她們來說很重要，因為她們在這裡舉行了第一次演唱會。慶祝她們的 15 週年也是特別的。朴春補充說，她們非常感謝大家在準備這次演唱會時給予她們的愛和支持。終於能夠為大家表演，她們感到非常高興。</p>
+<p>朴山達拉繼續說，她知道這等待的時間一定讓大家感到很漫長，但謝謝大家的耐心。十年後第一次見面，帶回了美好的回憶。</p>
+<p>李彩麟說，她們的目標是通過這次演唱會喚起大家的懷舊感，展示經典的 2NE1 演唱會的樣子。她們感受到大家的正能量，她們希望大家也能感受到。</p>
+<h2>亞洲巡演即將啟動：2NE1（韩语：투애니원）</h2>
+<p>朴山達拉透露未來計劃，表示最初只打算舉辦一場音樂會，但門票銷售速度太快，因此又增加了兩場。這是否意味著應該考慮再舉辦一場安可音樂會？屆時將嘗試預訂一個更大的場地！</p>
+<p>2NE1（韩语：투애니원）現在準備在亞洲展開巡演，計劃在九個城市舉辦15場音樂會。以下是巡演的詳細信息：</p>
+<ul>
+<li>首場音樂會：11月16日在馬尼拉舉行</li>
+<li>巡演城市：九個城市</li>
+<li>音樂會場數：15場</li>
+</ul>
+
+<p>資料來源：Korea Herald</p>
+</div><div class ="news-vid-outer">
+<div class="related-vid-text-outer title-bar ">
+<p class="related-vid-text">相關影片：</p>
+</div>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/8He3IE8Kw1g" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+
+<p class="news-text-inner">資料來源： YouTube</p>
+</div>
+
+
+ <div class ="related-news-outer title-bar">
+        <p class="related-news-text">相關新聞：</p>
+      </div>
+      
+      <div class ="related-news-box">
+        
+	<p class ="related-news">
+          <i class="bi bi-dot"></i>
+          <a href="https://www.famechos.me/news/KPOP風暴來襲！TXT、aespa、The Boyz、BOYNEXTDOOR 四大天團齊發新作與巡演.html">KPOP風暴來襲！TXT、aespa、The Boyz、BOYNEXTDOOR 四大天團齊發新作與巡演</a>
+        </p>
+                
+      </div>
+
+    </div>
+
+    </main>
+ <footer class="footer">
+    <div class="footer-outer">
+
+
+      <div class="footer-up-outer">
+        <div class="footer-right-name-box">
+          <img class="famechos-logo-footer" src="../img/famechos_logo.png">
+        </div>
+        <div class="footer-right-text-box">
+          <p class="footer-right-text">每日為你提供最新、最全面的日韓資訊。</p>
+        </div>
+        <div class="footer-button-box">
+          <button class="facebook-btn footer-btn">
+            <i class="bi bi-facebook footer-logo"></i>
+          </button>
+          <button class="ig-btn footer-btn">
+            <i class="bi bi-instagram footer-logo"></i>
+          </button>
+          <button class="x-btn footer-btn">
+            <i class="bi bi-twitter-x footer-logo"></i>
+          </button>
+          <button class="x-btn footer-btn">
+            <i class="bi bi-envelope-fill footer-logo"></i>
+          </button>
+        </div>
+      </div>
+
+      <div class="footer-down-outer">
+        <div class="kpop-footer-box footer-box">
+          <p class="footer-text">K-POP</p>
+        </div>
+        <div class="jpop-footer-box footer-box">
+          <p class="footer-text">J-POP</p>
+        </div>
+        <div class="drama-footer-box footer-box">
+          <p class="footer-text">影視</p>
+        </div>
+        <div class="other-footer-box footer-box">
+          <p class="footer-text">其他</p>
+        </div>
+
+
+      </div>
+
+      <div class="copyright-outer">
+        <p class="copyright-text">
+          Copyright © 2024 by <strong>Famechos.me</strong> All Rights Reserved.
+        </p>
+      </div>
+
+      
+    </div>
+
+
+
+  </footer>
+
+<script src="../nav-list.js"></script>
+
+</body>
+</html>
